front-end/src/styles/projects.css
#projects {
  height: 100vh;
  color: var(--col-grey-drk);
}

#projects .width-wrapper {
  height: 100%;
  display: grid;
  grid-template-columns: 20% 80%;
  grid-template-rows: 10% 90%;
}

#projects h2 {
  grid-column: 1 / span 2;
  grid-row: 1 / span 1;
  text-align: center;
  margin: auto;
}

#projects #projects-nav ul {
  margin: 0;
  padding: 0;
  grid-column: 1 / span 1;
  grid-row: 2 / span 1;
}

#projects #projects-nav li {
  display: flex;
  margin: 0;
  padding: 0;
  margin: 10px 5% 0;
  padding: 5px;
  --border: 1px solid var(--col-blue-brt);
  border-top: var(--border);
  border-bottom: var(--border);
  font-size: 0.9em;
  transition: all 0.25s cubic-bezier(0.10, 0.20, 0.30, 1);
}

#projects #projects-nav li:hover {
  cursor: pointer;
  padding-left: 5%;
}

#projects #projects-nav li:focus {
  padding-left: 5%;
}

#projects #projects-nav li:active {
  padding-left: 5%;
}

#projects .wrapper {
  overflow: hidden;
  grid-column: 2 / span 1;
  grid-row: 2 / span 1;
  position: relative;
}

#projects .project {
  position: absolute;
  width: 100%;
  top: 0;
  left: 100%;
  transition: left 0.8s cubic-bezier(0.10, 0.20, 0.30, 1);
  background-color: #fff;

  padding: 10px;
  border: 1px solid var(--col-blue-drk);
}

#projects .project.focused {
  left: 0;
}

